adde some style...now working on miniatures

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <main class="container">
+        <h1><i class="fa-brands fa-playstation"></i> Be the Game Master with Playstation</h1>
         <div class="carousel">
             <div class="imgList">
             </div>
